--- a/aula18112020/index.html
+++ b/aula18112020/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Aula 18-11-2020</h1>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
