--- a/aula09122020/modelo/index.html
+++ b/aula09122020/modelo/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <style>
+        @import url(http://fonts.googleapis.com/css?family=Audiowide);
+    </style>
     <link rel="stylesheet" href="_css/estilo_modelo.css">
     <link rel="stylesheet" href="_css/menu_modelo.css">
     <meta charset="UTF-8">
@@ -12,7 +15,7 @@
         <header id="cabecalho">
             <img src="_img/logo.png" alt="Logo HTML5">
             <h1>PROGRAMADOR WEB</h1>
-            <h2>Curso profissionalizante: Programador WEB</h2>
+            <h2>Escola profissionalizante: Senac AR/PI</h2>
             <h3>Criação de aplicações interativas WEB</h3>
             <nav id="menu">
                 <h2 id="titulo_menu">Menu principal</h2>
